--- a/RelatedChat/app/Info.plist
+++ b/RelatedChat/app/Info.plist
@@ -11,11 +11,11 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Chat</string>
+	<string>Related Chat</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5.1</string>
+	<string>1.6</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -32,7 +32,7 @@
 	<key>FacebookAppID</key>
 	<string>553468878097977</string>
 	<key>FacebookDisplayName</key>
-	<string>Chat</string>
+	<string>Related Chat</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
