--- a/RelatedChat/Podfile
+++ b/RelatedChat/Podfile
@@ -7,6 +7,7 @@ target 'app' do
 	pod 'Firebase/Auth'
 	pod 'Firebase/Database'
 	pod 'Firebase/Storage'
+	pod 'OneSignal'
 	pod 'Realm'
 
 	pod 'IQAudioRecorderController'
